--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
 
         <div class="logo">
-          <a href="#"><img src="https://cdn-icons-png.flaticon.com/128/1351/1351861.png" alt="Logo"></a>
+          <a href="#"><img src="img\logo.png" alt="Logo"></a>
         </div>
         
         <nav>
